--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -113,6 +113,10 @@ body {
 
 /* Stilizovanje logIn stranice */
 
+.login {
+  text-align: center;
+}
+
 .logInPage {
   display: flex;
   flex-direction: column;
@@ -143,6 +147,16 @@ body {
 
 .logInPage button:hover {
   background-color: #006ea5;
+}
+
+.link-to-admin {
+  color: black;
+  text-decoration: none;
+  margin-top: 10px;
+}
+
+.link-to-admin:hover {
+  text-decoration: underline;
 }
 
 
@@ -353,6 +367,8 @@ body {
 .commentsSection button:hover {
   background-color: #0d5275; /* Darker blue color on hover */
 }
+
+
 
 
 
